// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui segment\\"
    >
      <h3
        class=\\"ui header\\"
        tabindex=\\"0\\"
      >
        
         
      </h3>
      <form
        class=\\"ui form\\"
      >
        <div
          class=\\"field\\"
        >
          <textarea
            name=\\"ABC\\"
            rows=\\"3\\"
          />
        </div>
      </form>
    </div>
  </div>
</body>"
`;

exports[`Render 2 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui segment\\"
    >
      <h3
        class=\\"ui header\\"
        tabindex=\\"0\\"
      >
        
         
      </h3>
      <div
        class=\\"ui floating message\\"
        style=\\"white-space: pre-wrap; overflow-wrap: break-word;\\"
      >
        <div
          class=\\"content\\"
        >
          <p>
            Participant response will appear here during scenario run.
          </p>
        </div>
      </div>
      <form
        class=\\"ui form\\"
      >
        <div
          class=\\"field\\"
        >
          <textarea
            name=\\"ABC\\"
            rows=\\"3\\"
          />
        </div>
      </form>
    </div>
  </div>
</body>"
`;

exports[`Render 3 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui segment\\"
    >
      <h3
        class=\\"ui header\\"
        tabindex=\\"0\\"
      >
        
         
      </h3>
      <form
        class=\\"ui form\\"
      >
        <div
          class=\\"field\\"
        >
          <textarea
            name=\\"ABC\\"
            rows=\\"3\\"
          />
        </div>
      </form>
    </div>
  </div>
</body>"
`;
